git-svn-id: http://svn.vdombox.ru/flextools/trunk@2128 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edit/containers/ObjectsPanel.mxml
+++ b/IDE/Vdom/vdom/components/edit/containers/ObjectsPanel.mxml
@@ -165,7 +165,7 @@ xmlns:containers="vdom.components.edit.containers.*" >
 			
 			var index:int =  tree.getItemIndex(tree.selectedItem);
 //			tree.selectedIndex = index;
-			tree.rowCount
+			tree.rowCount;
 			tree.scrollToIndex(index);
 			
 		}
