--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" backgroundColor="#ffffff" creationComplete="creationCompleteHandler()" hide="hideHendler()" 
+<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete="creationCompleteHandler()" hide="hideHendler()" 
 			show="showHnadler()" label="add Element" xmlns:ns1="vdom.components.treeEditor.colormenu.*" xmlns:colorMenu02="vdom.components.treeEditor.colorMenu02.*" xmlns:treeEditor="vdom.components.treeEditor.*">
 	
 
-<mx:Canvas id="main" width="100%" height="100%">
+<mx:Canvas id="main" width="100%" height="100%" backgroundColor="#ffffff">
 	
 	
 	
@@ -440,9 +440,9 @@
 -->
 </mx:Canvas>
 
-<mx:VBox   height="100%" >
-	<colorMenu02:ColorMenu2 id="colmen2" x="50"/>
-	<mx:Label text="Select type of Applikation:"  color="#ffffff"/>
+<mx:VBox    >
+	<colorMenu02:ColorMenu2 id="colmen2" />
+	
  	
 	
 	<mx:Button  label="add element"    click="addTreeElementLauncher()"/>
