git-svn-id: http://svn.vdombox.ru/flextools/trunk@2158 230e8929-42e3-3b44-a413-55659dd3a577

--- a/DB/StructureEditor/v.01/dbStructureEditor.mxml
+++ b/DB/StructureEditor/v.01/dbStructureEditor.mxml
@@ -63,7 +63,7 @@
 				</mx:HBox>
 								
 				<mx:HBox width="100%" verticalAlign="middle" horizontalAlign="right">
-					<mx:Button id="__applyBtn" label="Apply changes" click="{applyBtnHandler();}" enabled="false"/>
+					<mx:Button id="__applyBtn" label="Apply changes" click="{applyBtnClickHandler();}" enabled="false"/>
 				</mx:HBox>				
 			</mx:VBox>
 		</mx:VBox>		
