--- a/IDE/Vdom/vdom/components/treeEditor/AddTreeElementWindow.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/AddTreeElementWindow.mxml
@@ -6,7 +6,7 @@
 <mx:TitleWindow 
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
 	layout="absolute" width="500" height="350"
-	title="Resource Manager"
+	title="{resourceManager.getString('Tree','new_page')}"
 	creationComplete="creationComplete()"
 	showCloseButton="true"
 	verticalScrollPolicy="off" horizontalScrollPolicy="off" 
@@ -256,17 +256,17 @@
     	<mx:ComboBox id="comBoxAppl"     dataProvider="{arrAppl}" 
     	  	     close="comBoxClose(event.target)"   x="255" y="204" width="167"/>
     	<mx:Image id="image" x="20" y="15" width="207" height="246"/>
-    	<mx:Button x="20" y="275" label="Select image" click="resourceBrowserLauncher()"/>
+    	<mx:Button x="20" y="275" label="{resourceManager.getString('Tree','select_image')}" click="resourceBrowserLauncher()"/>
     	
-    	<mx:Label x="250" y="15" text="Title:" width="75" height="19"/>
-    	<mx:Label x="254" y="67" text="Description:"/>
-    	<mx:Label x="254" y="186" text="Tipe:" width="80"/>
+    	<mx:Label x="250" y="15" text="{resourceManager.getString('Tree','title')+':'}"  height="19"/>
+    	<mx:Label x="254" y="67" text="{resourceManager.getString('Tree','description')+':'}"/>
+    	<mx:Label x="254" y="186" text="{resourceManager.getString('Tree','select_type')+':'}" />
     	
-    	<mx:TextInput id="txt" x="254" y="31" width="201" text="name"/>
-    	<mx:TextArea id="descript" x="254" y="86" height="88" width="201" text="description"/>
+    	<mx:TextInput id="txt" x="254" y="31" width="201" text="{resourceManager.getString('Tree','title')}"/>
+    	<mx:TextArea id="descript" x="254" y="86" height="88" width="201" text="{resourceManager.getString('Tree','description')}"/>
     	<mx:HBox y="278" width="100%" horizontalAlign="right" right="20">
     		<mx:Button id="OK" label="Ok"    click="okPressed()"/>
-    		<mx:Button label="Cancel" click="cancelPressed()"/>
+    		<mx:Button label="{resourceManager.getString('Tree','cancel')}" click="cancelPressed()"/>
     	</mx:HBox>
 	</mx:Canvas>
 </mx:TitleWindow>
