git-svn-id: http://svn.vdombox.ru/flextools/trunk@2167 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/ImageChooser.mxml
+++ b/IDE/Vdom/vdom/controls/ImageChooser.mxml
@@ -198,6 +198,6 @@
 </mx:HorizontalList>
 	<mx:HBox width="100%" horizontalAlign="right">
 		<mx:Button label="OK" cornerRadius="0" click="closeHandler(true);"/>
-		<mx:Button label="Chancel" cornerRadius="0" click="closeHandler(false);"/>
+		<mx:Button label="Cancel" cornerRadius="0" click="closeHandler(false);"/>
 	</mx:HBox>
 </mx:TitleWindow>
