git-svn-id: http://svn.vdombox.ru/flextools/trunk@2192 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/externalEditorButton/SpinnerScreen.mxml
+++ b/IDE/Vdom/vdom/controls/externalEditorButton/SpinnerScreen.mxml
@@ -5,7 +5,7 @@
 	horizontalAlign="center" verticalAlign="middle"
 	visible="false">
 	
-	<mx:Image source="@Embed(source='/assets/resourceBrowserIcons/spinner.swf')" />
+	<mx:Image source="@Embed(source='/assets/common/spinner.swf')" />
 	<mx:Spacer height="20" />
 	<mx:Label text="Please wait..." />
 </mx:Box>
