git-svn-id: http://svn.vdombox.ru/flextools/trunk@2193 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -6,11 +6,11 @@
 <mx:TitleWindow 
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
 	layout="absolute" width="800" height="600"
-	title="Resource Manager"
+	title="Resource Browser"
 	creationComplete="{creationComplete();}"
 	showCloseButton="true"
 	verticalScrollPolicy="off" horizontalScrollPolicy="off"
-	borderAlpha="0.9" cornerRadius="1" 
+	borderAlpha="0.95" cornerRadius="1" 
 	xmlns:resourceBrowser="vdom.controls.resourceBrowser.*"
 	visible="true" shadowDirection="right">
 	
