--- a/DB/DataEditor/v.01/dbDataEditor.mxml
+++ b/DB/DataEditor/v.01/dbDataEditor.mxml
@@ -25,10 +25,13 @@
 	<mx:ViewStack id="__alertArea" width="100%" height="24" paddingTop="0" paddingBottom="0">
 		<mx:Canvas id="__normal" width="100%" height="24">
 			<mx:HBox width="100%" height="100%" verticalAlign="middle" paddingRight="0" paddingLeft="0">
-				<mx:Button id="__addBtn" label="add line" height="20" click="{addRowBtnClickHandler();}" />
-				<mx:Button id="__deleteBtn" label="delete line" height="20" click="{deleteBtnClickHandler();}" />
+				<mx:Button id="__addBtn" label="add line" height="20" click="{addRowBtnClickHandler();}"
+					icon="@Embed(source='/icons/insert.png')" />
+				<mx:Button id="__deleteBtn" label="delete line" height="20" click="{deleteBtnClickHandler();}"
+					icon="@Embed(source='/icons/remove.png')" />
 				<mx:VRule height="20" />		
-				<mx:Button id="__commitBtn" label="commit" height="20" enabled="false" click="{commitBtnClickHandler();}" />
+				<mx:Button id="__commitBtn" label="commit" height="20" enabled="false" click="{commitBtnClickHandler();}"
+					icon="@Embed(source='/icons/commit.png')" />
 				<mx:Spacer width="100%" />
 				<mx:HBox horizontalGap="0">
 					<mx:Label id="__operCount" fontWeight="bold" text="0" textAlign="right" />
