git-svn-id: http://svn.vdombox.ru/flextools/trunk@2203 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -12,7 +12,9 @@
 	verticalScrollPolicy="off" horizontalScrollPolicy="off"
 	borderAlpha="0.95" cornerRadius="1" 
 	xmlns:resourceBrowser="vdom.controls.resourceBrowser.*"
-	visible="true" shadowDirection="right">
+	visible="true" shadowDirection="right"
+	borderColor="#636363" titleStyleName="externalApplTitle"
+	titleIcon="@Embed(source='/assets/common/resourcebrowser.png')">
 	
 	<mx:Script>
 		<![CDATA[
