git-svn-id: http://svn.vdombox.ru/flextools/trunk@2217 230e8929-42e3-3b44-a413-55659dd3a577

--- a/DB/StructureEditor/v.01/dbStructureEditor.mxml
+++ b/DB/StructureEditor/v.01/dbStructureEditor.mxml
@@ -33,10 +33,10 @@
 					<mx:Label text="Type:" width="100" />
 					<mx:ComboBox id="__type" width="200" change="{__applyBtn.enabled = true; controlsEnable(false);}" enabled="false">
 						<mx:ArrayCollection>
-							<mx:Object label="TEXT"		data="text"/>
-							<mx:Object label="INTEGER"	data="integer"/>
-							<mx:Object label="REAL"		data="real"/>
-							<mx:Object label="BLOB"		data="blob"/>
+							<mx:Object label="TEXT"		data="TEXT"/>
+							<mx:Object label="INTEGER"	data="INTEGER"/>
+							<mx:Object label="REAL"		data="REAL"/>
+							<mx:Object label="BLOB"		data="BLOB"/>
 						</mx:ArrayCollection>
 					</mx:ComboBox>
 					
