git-svn-id: http://svn.vdombox.ru/flextools/trunk@2218 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/externalEditorButton/ApplicationWindow.mxml
+++ b/IDE/Vdom/vdom/controls/externalEditorButton/ApplicationWindow.mxml
@@ -3,7 +3,16 @@
 	xmlns:mx="http://www.adobe.com/2006/mxml" layout="vertical"
 	paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0"
 	cornerRadius="1" title="External Editor" horizontalAlign="center" verticalAlign="middle"
-	verticalGap="0" horizontalGap="0" borderAlpha="0.9" showCloseButton="true" shadowDistance="0" shadowDirection="right">
+	verticalGap="0" horizontalGap="0" borderAlpha="0.98" showCloseButton="true" shadowDistance="0"
+	shadowDirection="right" borderColor="#636363" titleStyleName="externalApplTitle"
+	titleIcon="@Embed(source='/assets/common/applwindow.png')" >
+	
+	<mx:Style>
+		.externalApplTitle {
+			color:#FFFFFF;
+			fontWeight:bold;
+		}
+	</mx:Style>
 
 	<mx:ControlBar paddingTop="1" paddingBottom="3" paddingRight="10" paddingLeft="10">
 		<mx:Spacer width="100%"/>
