git-svn-id: http://svn.vdombox.ru/flextools/trunk@2221 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -13,8 +13,15 @@
 	borderAlpha="0.95" cornerRadius="1" 
 	xmlns:resourceBrowser="vdom.controls.resourceBrowser.*"
 	visible="true" shadowDirection="right"
-	borderColor="#636363" titleStyleName="externalApplTitle"
+	borderColor="#636363" titleStyleName="resourceBrowserTitle"
 	titleIcon="@Embed(source='/assets/common/resourcebrowser.png')">
+	
+	<mx:Style>
+		.resourceBrowserTitle {
+			color:#FFFFFF;
+			fontWeight:bold;
+		}
+	</mx:Style>
 	
 	<mx:Script>
 		<![CDATA[
