git-svn-id: http://svn.vdombox.ru/flextools/trunk@2225 230e8929-42e3-3b44-a413-55659dd3a577

--- a/DB/StructureEditor/v.01/dbStructureEditor.mxml
+++ b/DB/StructureEditor/v.01/dbStructureEditor.mxml
@@ -66,8 +66,10 @@
 				<mx:HBox width="100%" verticalAlign="middle" horizontalAlign="right">
 					<mx:Image id="__attentionImg"
 						source="@Embed(source='/icons/important.png')" visible="{__applyBtn.enabled}" />
-					<mx:Button id="__applyBtn" label="Apply changes" click="{applyBtnClickHandler();}" enabled="false"
+					<mx:Button id="__applyBtn" label="apply changes" click="{applyBtnClickHandler();}" enabled="false"
 						icon="@Embed(source='/icons/commit.png')" />
+					<mx:Button id="__discardBtn" label="discard" click="{discardChanges();}" enabled="{__applyBtn.enabled}"
+						icon="@Embed(source='/icons/discard.png')" />
 				</mx:HBox>				
 			</mx:VBox>
 		</mx:VBox>		
