git-svn-id: http://svn.vdombox.ru/flextools/trunk@2226 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -108,14 +108,16 @@
 	 		{
 	 			dataManager.addEventListener(DataManagerEvent.APPLICATION_EVENT_LOADED, applicationEvenLoadedHandler);
 	 		
+	 			getApplEventID = eeEvt.objID;
+	 			
 	 			if(dataChanged)
 	 			{
 	 				creatDataToServer(); //eeEvt.objID
-	 				getApplEventID = eeEvt.objID;
+	 				
 	 			}else
 	 			{
 	 				
-	 				dataManager.getApplicationEvents(eeEvt.objID);
+	 				dataManager.getApplicationEvents(getApplEventID);
 	 			}
 	 			dataChanged = false;
 	 			
@@ -610,11 +612,18 @@
 				actionsArray = [];		
 				for each(var actID:XML in xmlToTree.E2vdom.Actions.children())
 				{
-					var objAct:EventEditorAction = new EventEditorAction(actID, curContainerTypeID);
-					
-					 actionsArray[objAct.ID] = setListeners4Action(objAct);
-					
-					can.addChild(actionsArray [actID.@ID]);
+					var type:XML = dataManager.getTypeByObjectId(actID.@ObjTgtID)
+					var tupeID:String = type.Information.ID;
+					if(tupeID == curContainerTypeID)
+					{  
+//					de79cc9c-a40b-4325-8025-951f33a74191 / 
+//					4e3f096d-f18d-44ae-9d5b-7a13ff40963d
+						var objAct:EventEditorAction = new EventEditorAction(actID, curContainerTypeID);
+						
+						 actionsArray[objAct.ID] = setListeners4Action(objAct);
+						
+						can.addChild(actionsArray [actID.@ID]);
+					}
 				}
 				
 				eventsArray = [];		
